app color is now added automatically

--- a/Metadata/desktop-apps.json
+++ b/Metadata/desktop-apps.json
@@ -5,7 +5,7 @@
             "name":"About", 
             "icon":"../Assets/Icons/info-icon.svg",
             "page":"../HTML/about.html",
-            "color":"#0000ff",
+            "color":"blue",
             "alt": "Information Icon. Blue circle with a white lowercase i"
         }
     ]
